[tool.poetry]
name = "pubmed-paper-fetcher"
version = "0.1.0"
description = "Fetch PubMed papers with pharma/biotech affiliations"
authors = ["Your Name <you@example.com>"]
packages = [{include = "pubmed_paper_fetcher"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
lxml = "^5.2.1"
tqdm = "^4.66.0"
pandas = "^2.2.2"

[tool.poetry.scripts]
get-papers-list = "cli:main"
